fix: horizontal scroll

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,6 +30,5 @@
 
 body {
   height: 100vh;
-  width: 100vw;
   font-size: 1.6rem;
 }
